Added batch delete route
