# V2/routes/adminRoutes.js
@@ -1,6 +1,6 @@
 import express from "express";
 import { validateAddSingleAssessmentDetails, validateExistingUserInBatch, validateIncomingBulkTest, validateIncomingBulkUsers, validateUser } from "../../validations/AdminRouteValidations.js";
-import { addBatchForExistingUser, addBulkTestDataofUsers, addRemark, addSingleAssessmentDetails, addUser, allUsers, bulkUsersFromFile, deleteAssessment, deleteUser, getAllBatches, getAllBatchesIncludingInactive, getAllModules, getAllRoles, getAllTrainees, getAllTraineesByLocationsAndNotInBatch, getAssessmentDetails, getAssessmentsDetailsForSpecificBatch, getAssessmentsForSpecificBatch, getBatch, getLocations, getTraineeDetails, getUserDetails, setBatchInactive, setUserInactive } from "../controllers/AdminController.js";
+import { addBatchForExistingUser, addBulkTestDataofUsers, addRemark, addSingleAssessmentDetails, addUser, allUsers, bulkUsersFromFile, deleteAssessment, deleteBatch, deleteUser, getAllBatches, getAllBatchesIncludingInactive, getAllModules, getAllRoles, getAllTrainees, getAllTraineesByLocationsAndNotInBatch, getAssessmentDetails, getAssessmentsDetailsForSpecificBatch, getAssessmentsForSpecificBatch, getBatch, getLocations, getTraineeDetails, getUserDetails, setBatchInactive, setUserInactive } from "../controllers/AdminController.js";
 import { adminAuthMiddleware } from "../middlewares/adminAuthMiddleware.js";
 import { authMiddleware } from "../middlewares/authMiddleware.js";
 import { upload } from "../middlewares/multerMiddleware.js";
@@ -44,7 +44,7 @@ adminRouterV2.get("/assessments/:batchId", getAssessmentsDetailsForSpecificBatch
 adminRouterV2.get("/users/trainees/:batchId/:location", getAllTraineesByLocationsAndNotInBatch);
 adminRouterV2.get("/locations", getLocations);
 
-// adminRouterV2.delete("/batch/:batchId", )
 adminRouterV2.delete("/assessment/:assessmentId", deleteAssessment);
 adminRouterV2.delete("/user/delete/:userId", deleteUser);
+adminRouterV2.delete("/batch/:batchId", deleteBatch);
 export default adminRouterV2;
