# swagger-output.json
@@ -14,7 +14,7 @@
     },
     {
       "name": "V2",
-      "description": "This is version one which is designed with SQL database i.e., PostgresSQL"
+      "description": "This is version two which is designed with SQL database i.e., PostgresSQL"
     }
   ],
   "schemes": [
@@ -61,6 +61,22 @@
       }
     },
     "/api/users/download/trainee/input": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/octet-stream"
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V1"
+        ]
+      }
+    },
+    "/api/users/download/marksheet/input": {
       "get": {
         "description": "",
         "produces": [
@@ -643,6 +659,38 @@
         ]
       }
     },
+    "/v2/api/users/download/trainee/input": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/octet-stream"
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/users/download/marksheet/input": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/octet-stream"
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
     "/v2/api/users/sign-out": {
       "get": {
         "description": "",
@@ -672,12 +720,223 @@
         ]
       }
     },
+    "/v2/api/users/change-password": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "newPassword": {
+                  "example": "any"
+                },
+                "confirmPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/users/profile/{imageName}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "imageName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/users/profile/image": {
+      "put": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/roles": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
     "/v2/api/admin/bulk/users": {
       "post": {
         "description": "",
         "responses": {
           "401": {
             "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/users/toggle-active": {
+      "put": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/batch/toggle-active": {
+      "put": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/users/user/remark": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "employeeId": {
+                  "example": "any"
+                },
+                "remark": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/users/user/add/batch": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "employeeId": {
+                  "example": "any"
+                },
+                "batchId": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "tags": [
@@ -716,9 +975,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "batchId": {
-                  "example": "any"
-                },
                 "moduleName": {
                   "example": "any"
                 },
@@ -732,6 +988,9 @@
                   "example": "any"
                 },
                 "assessmentType": {
+                  "example": "any"
+                },
+                "batchId": {
                   "example": "any"
                 }
               }
@@ -814,6 +1073,40 @@
         ]
       }
     },
+    "/v2/api/admin/user/{employeeId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "employeeId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/batches/all": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
     "/v2/api/admin/batches/{location?}": {
       "get": {
         "description": "",
@@ -862,6 +1155,108 @@
         "responses": {
           "401": {
             "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/single/users": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "employeeId": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "batch": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/single/assessment": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "assessmentId": {
+                  "example": "any"
+                },
+                "employeeId": {
+                  "example": "any"
+                },
+                "obtainedMarks": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "tags": [
@@ -923,6 +1318,88 @@
         "parameters": [
           {
             "name": "batchId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/users/trainees/{batchId}/{location}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "batchId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "location",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/locations": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/assessment/{assessmentId}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "assessmentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "V2"
+        ]
+      }
+    },
+    "/v2/api/admin/user/delete/{userId}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
